[workspace]
members = [
  "crates/plaid_link",
]

[package]
name = "clerk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.5"
chrono = "0.4"
clap = "3.2"
console-subscriber = "0.1"
crossbeam-channel = "0.5"
dirs = "4.0"
futures = "0.3"
futures-util = "0.3"
http = "0.2"
ketos = "0.12"
ketos_derive = "0.12"
plaid-link = { path = "crates/plaid_link", version = "0.1.0" }
regex = "1.6"
rplaid = { version = "0.3.0", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.13", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
tabwriter = "1.2"
thiserror = "1.0"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.2"
toml = "0.5"
url = "2.2"

[dev-dependencies]
tokio = { version = "1.20", features = ["rt-multi-thread", "macros", "test-util"] }
