[workspace]
members = [
  "crates/plaid_link",
]

[package]
name = "clerk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.43"
axum = "0.5.4"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.2"
console-subscriber = "0.1.5"
crossbeam-channel = "0.5.4"
dirs = "3.0.2"
futures = "0.3.17"
futures-util = "0.3.17"
http = "0.2.4"
ketos = "0.12.0"
ketos_derive = "0.12.0"
plaid-link = { path = "crates/plaid_link", version = "0.1.0" }
regex = "1.5.4"
rplaid = { version = "0.3.0", features = ["default"] }
rusty-money = { version = "0.4", features = ["iso"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.13", features = ["sqlite", "runtime-tokio-native-tls", "migrate", "chrono"] }
tabwriter = "1.2.1"
thiserror = "1.0.31"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-tree = "0.2.0"
toml = "0.5.8"
url = "2.2.2"
ulid = { version = "1.0", features = ["std"] }
