[workspace]
members = [
  "crates/plaid_link",
]

[package]
name = "clerk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.2"
console-subscriber = "0.1"
crossbeam-channel = "0.5"
dirs = "4.0"
futures = "0.3"
futures-util = "0.3"
http = "0.2"
plaid-link = { path = "crates/plaid_link", version = "0.1.0" }
regex = "1.6"
rplaid = { git = "https://github.com/allancalix/rplaid.git", branch = "main", features = ["decimal"] }
rusty-money = { version = "0.4", features = ["iso"] }
sea-query = { version = "0.26", features = ["backend-sqlite", "derive", "sqlx-sqlite", "thread-safe"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "migrate", "chrono"] }
tabwriter = "1.2"
thiserror = "1.0"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.2"
toml = "0.5"
url = "2.2"
ulid = { version = "1.0", features = ["std"] }
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
