[package]
name = "plaid-link"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.5"
base64 = "0.13"
hyper = { version = "0.14", features = ["client"] }
lazy_static = "1.4"
rplaid = { version = "0.3.0", features = ["default"] }
thiserror = "1.0"
tokio = { version = "1.20", features = ["rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
